syntax = "proto3";
package moonalt;

message RawFrameMetaV1 {
  string schema      = 100; // keep for parity: "moonalt.raw_frame_v1"
  int64  frame_id    = 1;
  int32  width       = 2;
  int32  height      = 3;
  int64  timestamp_ms= 4;
  string pixel_format= 5; // e.g., "BGR24"
  string source      = 6; // "obs" | "decklink" | etc.
  map<string,string> source_meta = 7; // optional extras
}

message BBox {
  int32 x1 = 1;
  int32 y1 = 2;
  int32 x2 = 3;
  int32 y2 = 4;
}

message YoloOutputV1 {
  string schema      = 100; // keep for parity: "moonalt.yolo_output_v1"
  int64  frame_id    = 1;
  int32  width       = 2;
  int32  height      = 3;
  string pixel_format= 4; // same as input
  string mask_format = 5; // "GRAY8"
  repeated BBox bboxes = 6;
}
